test/FAIL/breakcmd/del_bp/02_test_break.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

break del 0x1000
